--- a/css/login.css
+++ b/css/login.css
@@ -11,18 +11,20 @@ body{
     padding:0;
     background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
     url('https://images.unsplash.com/photo-1643913588380-ee9f06bb26bd?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-    background-size: cover;        
+    background-size: cover;          
     background-position: center;   
     background-repeat: no-repeat;
     background-attachment: fixed;  
 }
 
 .login-container {
-    width: 100%;
+    width: 100%; 
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 110px;
+    min-height: 100vh;
+    padding: 20px; 
+    margin: 0; 
 }
 
 .login-box {
@@ -31,11 +33,22 @@ body{
     padding: 40px;
     border-radius: 10px;
     width: 350px;
+    max-width: 90%; 
     text-align: center;
     color: #fff;
     animation: fadeZoom 0.6s ease forwards;
     opacity: 0;
     transform: scale(0.9);
+}
+
+
+.message-box {
+    
+    margin-top: 20px;
+    margin-bottom: 20px !important; 
+    text-align: left; 
+    font-size: 14px;
+    font-weight: 500;
 }
 
 
@@ -49,6 +62,7 @@ body{
     justify-content: center;
     gap: 15px;
     margin-bottom: 15px;
+    margin-top: 15px; 
 }
 .social-btn {
     width: 40px;
@@ -59,14 +73,6 @@ body{
     font-size: 18px;
     font-weight: bold;
 }
-.fb { background: #3b5998; color: #fff; }
-.google { background: #db4437; color: #fff; }
-
-.or {
-    margin: 10px 0;
-    color: #bbb;
-}
-
 
 form input {
     width: 100%;
@@ -120,7 +126,7 @@ form input::placeholder {
     color: #cb8c2d;
     cursor: pointer;
     text-decoration: none;
-     transition: color 0.3s ease;
+    transition: color 0.3s ease;
 }
 .create a:hover {
 color: #ffffff;
