--- a/css/meeting.css
+++ b/css/meeting.css
@@ -45,6 +45,7 @@ nav a:hover {
   color: #ffffff !important;
   transform: scale(1.1);
   transition: 0.3s;
+  border-radius: 40px;
 }
 .background-img {
   background-size: cover;
