--- a/css/payment_reservation_room.css
+++ b/css/payment_reservation_room.css
@@ -45,6 +45,7 @@ nav a:hover {
   background: #0026ff;
   color: #ffffff !important;
   transform: scale(1.1);
+  border-radius: 40px;
 }
 
 .background {
