--- a/css/reservasi_room.css
+++ b/css/reservasi_room.css
@@ -10,40 +10,40 @@ body {
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px 50px;
-  background: #ffffff;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  box-shadow: inset 0 0 10px rgba(72, 72, 72, 0.5);
-  
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 50px;
+    background: var(--white);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 header img {
-  height: 70px;
-  
+    height: 70px;
+   
 }
 
 nav a {
-  margin: 0 15px;
-  text-decoration: none;
-  color: black;
-  font-weight: 500;
-  padding: 8px 15px;
-  border-radius: 5px;
-  display: inline-block;
-  transition: background 0.3s, color 0.3s, transform 0.3s;
+    margin: 0 10px;
+    text-decoration: none;
+    color: #000;
+    font-weight: 500;
+    padding: 8px 15px;
+    border-radius: 25px; 
+    display: inline-block;
+    transition: 0.3s;
 }
 
 nav a:hover {
-  background: #0026ff;
-  color: #ffffff !important;
-  transform: scale(1.1);
+    background: #0026ff;
+    color: #ffffff;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0, 38, 255, 0.3);
+    border-radius: 40px;
 }
-
 
 
 
