--- a/css/room.css
+++ b/css/room.css
@@ -125,7 +125,7 @@ nav a:hover {
   text-align: center;
   padding: 20px;
   background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
-  url('/img/room.avif');
+  url('../img/room.avif');
   background-blend-mode: darken;
   background-size: cover;
   background-position: center;
